--- a/static/fragment/footer.html
+++ b/static/fragment/footer.html
@@ -1,4 +1,4 @@
-<div class="copyleft" style="padding-left: 0.5em; padding-right: 0.5em">
+<div class="copyleft" style="padding-left: 0.5em; padding-right: 0.5em ">
     <hr>
     2022.
     <a target="_blank" href="https://works.miscthings.net">
@@ -8,7 +8,7 @@
     <a href="/"><i class="fa-solid fa-house"></i> 홈으로</a>
 </div>
 
-<div class="copyleft" style="margin-top: 0.2em !important;">
+<div class="copyleft mb-5" style="margin-top: 0.2em !important;">
     <a href="https://status.miscthings.net/status/miscthings" class="version"></a>
 </div>
 <script src="/static/version.js"></script>
