--- a/static/introduce.html
+++ b/static/introduce.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div style="padding-left: 0.5em; padding-right: 0.5em">
+<div class="container mt-3">
     <h1 style="text-align: center;">DU Attend 소개</h1>
     <hr>
 
@@ -33,7 +33,7 @@
 
 
         <h2>사용법</h2>
-        <img src="/static/image/intro.png" alt="QR 을 찍는 사람, DU Mobile 에 접속하고 출석 링크를 클릭하는 사람">
+        <img src="/static/image/intro.png" alt="QR 을 찍는 사람, DU Mobile 에 접속하고 출석 링크를 클릭하는 사람" width="100%">
         <div>
             <ol>
                 <li>회원가입 / 로그인 후 강의실 추가 버튼을 누르세요.</li>
