--- a/static/password_reset.html
+++ b/static/password_reset.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<div style="padding-left: 0.5em; padding-right: 0.5em">
+<div class="container" style="">
     <h1 style="text-align: center;">암호 재설정 문의</h1>
     <hr>
 
