--- a/static/report.html
+++ b/static/report.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<div style="padding-left: 0.5em; padding-right: 0.5em">
+<div class="container mt-3">
     <h1 style="text-align: center;">제보·문의·의견</h1>
     <hr>
 
@@ -39,7 +39,7 @@
 
         <div class="col-12">
             <div>
-                <button id="save_btn" onclick="save()" style="width: 100%;">전송</button>
+                <button class="btn btn-outline-success" id="save_btn" onclick="save()" style="width: 100%;">전송</button>
             </div>
         </div>
     </div>
