--- a/static/fragment/header.html
+++ b/static/fragment/header.html
@@ -9,12 +9,13 @@
 <link rel="apple-touch-icon" sizes="144x144" href="/static/icon/apple-touch-icon-144x144.png"/>
 <link rel="apple-touch-icon" sizes="152x152" href="/static/icon/apple-touch-icon-152x152.png"/>
 <link rel="apple-touch-icon" sizes="180x180" href="/static/icon/apple-touch-icon-180x180.png"/>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
-<link rel="stylesheet" href="/static/bootstrap-grid.css">
+<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">-->
+<link rel="stylesheet" href="/static/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/pretendardvariable.css"/>
 <script src="https://kit.fontawesome.com/3694f6fd31.js" crossorigin="anonymous"></script>
-<script src="/static/jquery-3.6.0.min.js"></script>
+<script src="/static/js/jquery.js"></script>
+<script src="/static/js/bootstrap.js"></script>
 <script src="/static/sentry.min.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-W60L1V7RMC"></script>
