--- a/static/fragment/banner_new.html
+++ b/static/fragment/banner_new.html
@@ -7,3 +7,23 @@
         <i class="fa-regular fa-circle-question"></i>
     </div>
 </div>
+<div class="card mb-2 hstack gap-2" style="font-size: 1.2em; background-color: rgba(211,211,211,0.47)"
+     onclick="alert_2();" role="button">
+    <div class="ms-4 mt-2 mb-2">
+        <span>[버그] 강의실 이름 변경 문제</span>
+    </div>
+    <div class="ms-auto me-4">
+        <i class="fa-solid fa-triangle-exclamation"></i>
+    </div>
+</div>
+
+<script>
+
+    function alert_2() {
+        alert(`강의실 이름 변경이 안되는 문제가 있습니다.\n변경이 안될 경우 문의란에 연락처와 함께 문의해주세요. 신속히 수정해 드립니다.`);
+    }
+
+    function alert_nd() {
+        alert(`[출석 하기] → 강의실 이름을 클릭하면 출석 페이지로 이동됩니다.\n[강의실 수정·삭제] → 목록 하단 사용자 설정 메뉴에 있습니다.`);
+    }
+</script>
